# Haune

./: .gitignore  Cargo.toml  README.md  bot.py  launcher.py
cogs/: mangadex.py
proxy/: app.py  views.py
src/: main.rs
src/commands/: anime.rs  misc.rs  mod.rs
src/utils/mangadex/: client.rs  structs.rs
utils/: __init__.py
utils/mangadex/: base.py  models.py
