[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread", "macros"] }
poise = "0.5.4"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
futures = "0.3.28"
env_logger = "0.10.0"
toml = "0.5.2"
